tests/snapshot/inputs/errors/subcontract_type_path_underline.ncl
let val | Array (Array {foo: Dyn -> Number }) = [
  [],
  [{ foo = fun x => "string" }]
] in
array.at 1 val
|> array.at 0
|> (fun r => r.foo null)
